test/fail/errors/CoinductiveBuiltinNatural.agda
module CoinductiveBuiltinNatural where

codata ℕ : Set where
  zero : ℕ
  suc  : (n : ℕ) → ℕ

{-# BUILTIN NATURAL ℕ    #-}
{-# BUILTIN ZERO    zero #-}
{-# BUILTIN SUC     suc  #-}
